# embedded-solution

./: CMakeLists.txt  package.xml
doc/: README.md  TODO.md  notas.md
doc/esquemaDelProyecto/: esquemaDelProyecto.xml
headers/: CONSTANTES.h  camaraAux.h  procesadorAux.h  utilsROS.h
launch/: peser.launch
src/: camara.cpp  camaraAux.cpp  procesador.cpp  procesadorAux.cpp  utilsROS.cpp
